# Game

./: CMakeLists.txt  todo.txt
include/: Animation.hpp  EntityFactory.hpp  Game.hpp  Tile.hpp
include/ECS/Components/: Components.hpp  RigidbodyComponent.cpp  RigidbodyComponent.hpp
include/ECS/Systems/: AnimationSystem.hpp  CSystem.hpp  ControllerSystem.hpp  MovementSystem.hpp  RenderSystem.hpp
include/Managers/: AnimationManager.hpp  Manager.hpp  ResourceManager.hpp  SceneManager.hpp  TileManager.hpp  TileSheetManager.hpp
include/Scenes/: GameScene.hpp  MenuScene.hpp  Scene.hpp
include/Tools/: TextureHelper.hpp
src/: CMakeLists.txt  EntityFactory.cpp  Game.cpp  Tile.cpp  main.cpp
src/ECS/Components/: RigidbodyComponent.cpp
src/ECS/Systems/: AnimationSystem.cpp  ControllerSystem.cpp  MovementSystem.cpp  RenderSystem.cpp
src/Managers/: AnimationManager.cpp  CMakeLists.txt  SceneManager.cpp  TileManager.cpp  TileSheetManager.cpp
src/Scenes/: CMakeLists.txt  GameScene.cpp  MenuScene.cpp
src/Tools/: TextureHelper.cpp
